--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                 <div class="col-md-6 col-lg-4">
                     <div class="info mb-5">
                         <img src="img/logo.png" alt="logo footer" class="mb-4">
-                        <p class="mb-5"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor provident deleniti ipsam corporis sed. </p>
+                        <p class="mb-5"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor provident deleniti ipsam corporis </p>
                         <div class="copyright">
                             created by<span>Graphberry</span>
                             <div>&copy;2022-<span>Bondi Inc</span></div>
